--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,8 @@ services:
     - docker
 
 before_install:
-    - docker build -t mesfandi/CS645Homework2 .
+    - docker build -t mesfandi/hw2 .
 
 #script:
     #- docker run mesfandi/CS645Homework2
 
-    
