--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ script:
     #- docker run mesfandi/CS645Homework2
     - echo "skipping tests"
 
-
-after_install:
+after_success:
     - docker build -t mesfandi/hw2 .
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
     - docker push mesfandi/hw2
